# kino

./: .gitignore  LICENSE  README.md  docker-compose.yml
kino-api/: .env  .env.example  Cargo.toml
kino-api/migrations/2023-12-18-171128_create_movies/: up.sql
kino-api/migrations/2023-12-19-185138_add_poster/: down.sql  up.sql
kino-api/migrations/2023-12-21-225451_nullable_release_date/: down.sql  up.sql
kino-api/src/: error.rs  main.rs  schema.rs
kino-api/src/controllers/: mod.rs  movies.rs  omdb.rs
kino-api/src/models/: mod.rs  movies.rs  omdb.rs
kino-api/src/services/: movies.rs
kino-ui/: .env  package.json  pnpm-lock.yaml
kino-ui/src/: App.tsx  main.tsx
kino-ui/src/apis/kino/: index.ts  types.ts
kino-ui/src/components/: movie-card.tsx  navbar.tsx
kino-ui/src/components/ui/: alert.tsx  badge.tsx  button.tsx  dialog.tsx  input.tsx  skeleton.tsx  toast.tsx
kino-ui/src/features/catalog/: index.tsx
kino-ui/src/features/catalog/add-movie-dialog/: index.tsx  step1.tsx  step2.tsx
kino-ui/src/redux/: store.ts
kino-ui/src/utils/: index.ts
